[gd_scene load_steps=13 format=3 uid="uid://bybbf512vo4jm"]

[ext_resource type="Script" path="res://scenes/fishing_minigame.gd" id="1_fqkjk"]
[ext_resource type="Texture2D" uid="uid://crxvgyoal704v" path="res://character_sprite/christina_fish.png" id="2_2re1o"]
[ext_resource type="Texture2D" uid="uid://2djcv7fagjjb" path="res://textures/fishing_bar_bg.png" id="2_tfho7"]
[ext_resource type="Texture2D" uid="uid://4ulnpdmtb62y" path="res://textures/fishing_bar_border.png" id="2_y6lv6"]
[ext_resource type="Texture2D" uid="uid://vlkji3otmew7" path="res://textures/fishing_bar.png" id="3_t3fc4"]
[ext_resource type="PackedScene" uid="uid://bwdvr65smlorg" path="res://scenes/fish_minigame_ui.tscn" id="6_37ysx"]

[sub_resource type="Animation" id="Animation_d815r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}

[sub_resource type="Animation" id="Animation_70em6"]
resource_name = "fish_caught"
length = 2.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 10]
}

[sub_resource type="Animation" id="Animation_ireah"]
resource_name = "fish_not_caught"
length = 2.00001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9]
}

[sub_resource type="Animation" id="Animation_vtk8b"]
resource_name = "lost_grip"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [4, 5]
}

[sub_resource type="Animation" id="Animation_6gtqk"]
resource_name = "reel_in"
length = 0.20001
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2wrep"]
_data = {
"RESET": SubResource("Animation_d815r"),
"fish_caught": SubResource("Animation_70em6"),
"fish_not_caught": SubResource("Animation_ireah"),
"lost_grip": SubResource("Animation_vtk8b"),
"reel_in": SubResource("Animation_6gtqk")
}

[node name="fishing_minigame" type="Node2D"]
script = ExtResource("1_fqkjk")

[node name="ProgressBar" type="TextureProgressBar" parent="."]
offset_left = 891.0
offset_top = 517.0
offset_right = 1019.0
offset_bottom = 549.0
scale = Vector2(0.48, 0.48)
value = 50.0
texture_under = ExtResource("2_tfho7")
texture_over = ExtResource("2_y6lv6")
texture_progress = ExtResource("3_t3fc4")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(946, 566)
zoom = Vector2(10, 10)
drag_horizontal_enabled = true
drag_vertical_enabled = true

[node name="christina_fish" type="CharacterBody2D" parent="."]
position = Vector2(945, 567)

[node name="Sprite2D" type="Sprite2D" parent="christina_fish"]
texture = ExtResource("2_2re1o")
hframes = 4
vframes = 3
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="christina_fish"]
libraries = {
"": SubResource("AnimationLibrary_2wrep")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="fish_minigame_ui" parent="CanvasLayer" instance=ExtResource("6_37ysx")]
visible = false

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/fish_minigame_ui/Panel/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/fish_minigame_ui/Panel/VBoxContainer/quit" to="." method="_on_quit_pressed"]

[editable path="CanvasLayer/fish_minigame_ui"]
